2006-01-22  Adam Piatyszek  <ediap@users.sourceforge.net>

	* itpp/base/bessel.cpp, itpp/base/random.h,
	itpp/base/bessel/jv.cpp, itpp/base/bessel/struve.cpp: Fixed a
	problem with "#pragma" warnings during compilation with GCC

2006-01-21  Thomas Eriksson  <thomases2@users.sourceforge.net>

	* A lot of changes for MSVC.net 2005 compability

2006-01-21  Adam Piatyszek  <ediap@users.sourceforge.net>

	* itpp/base/binfile.cpp, itpp/base/cholesky.cpp,
	itpp/base/copy_vector.h, itpp/base/eigen.cpp, itpp/base/inv.cpp,
	itpp/base/lapack.h, itpp/base/ls_solve.cpp, itpp/base/lu.cpp,
	itpp/base/mat.h, itpp/base/qr.cpp, itpp/base/svd.cpp,
	itpp/base/timing.cpp, itpp/base/transforms.cpp, itpp/base/vec.h:
	Including a proper configuration header depending on _MSC_VER
	definition (merged from itpp-3-9-branch)

2006-01-19  Tony Ottosson  <tonyottosson@users.sourceforge.net>
	
	* itpp/base/window.{h,cpp}, tests/window_test.cpp: New files.
	Some code moved from base/specmat.{h,cpp}. Also added
	blackman() and increased the documentation.

2006-01-18  Tony Ottosson  <tonyottosson@users.sourceforge.net>
	
	* itpp/base/elmatfunc.h: Added log() for cvec and cmat.
	
	* itpp/base/filter_design.{h,cpp}: Added 
	modified_yulewalker(), arma_estimator(), and yulewalk().

	* test/filter_design_test.{cpp,ref}: Updated for new functions.
	
2006-01-14  Adam Piatyszek  <ediap@users.sourceforge.net>

	* itpp/base/schur.cpp, tests/schur_test.cpp: Fixed a bug that
	caused compilation error when LAPACK was not installed

	* itpp/base/matfunc.cpp (sqrtm): Removed unnecessary to_cmat()
	conversion

	* tests/matfunc_test.ref: Updated improper reference file

2006-01-13  Adam Piatyszek  <ediap@users.sourceforge.net>

	* tests/*.cpp, tests/transforms_test.ref: Fixed incorrect
	preprocessor checks for defined external libraries. One reference
	file updated. (merged from itpp-3-9-branch)
	
	* itpp/base/transform.cpp: Fixed improper error messages (merged
	from itpp-3-9-branch)
