@@ -49,7 +49,8 @@ h_base_sources = \
 	$(top_srcdir)/itpp/base/svec.h \
 	$(top_srcdir)/itpp/base/timing.h \
 	$(top_srcdir)/itpp/base/transforms.h \
-	$(top_srcdir)/itpp/base/vec.h
+	$(top_srcdir)/itpp/base/vec.h \
+	$(top_srcdir)/itpp/base/window.h
 
 cpp_base_sources = \
 	$(top_srcdir)/itpp/base/bessel.cpp \
@@ -91,4 +92,5 @@ cpp_base_sources = \
 	$(top_srcdir)/itpp/base/svec.cpp \
 	$(top_srcdir)/itpp/base/timing.cpp \
 	$(top_srcdir)/itpp/base/transforms.cpp \
-	$(top_srcdir)/itpp/base/vec.cpp
+	$(top_srcdir)/itpp/base/vec.cpp \
+	$(top_srcdir)/itpp/base/window.cpp
